<?xml version="1.0"?>

<package format="2">

  <name>my_gmapping</name>
  <version>0.0.0</version>
  <description>The my_gmapping package</description>

  <maintainer email="chengeyang2019@u.northwestern.edu">Chenge Yang</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <depend>openslam_gmapping</depend>
  <depend>gmapping</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot3_teleop</depend>
  <depend>turtlebot3_description</depend>

  <export>
  </export>

</package>
